# lip2sp

./: README.md  checkpoints.txt  pyproject.toml
conf/: config.yaml
conf/data/: config.yaml
conf/data_choice/: config.yaml
conf/model/: config.yaml
conf/path/: config.yaml
conf/training/: base.yaml  base_debug.yaml  base_hubert.yaml  base_hubert_2.yaml  base_hubert_2_debug.yaml  base_hubert_debug.yaml  base_hubert_hifigan_finetuning.yaml  base_hubert_hifigan_finetuning_debug.yaml  config.yaml  hifigan.yaml  hifigan_base_hubert_2.yaml  hifigan_base_hubert_2_debug.yaml  hifigan_debug.yaml  hifigan_multiple_ssl.yaml  hifigan_multiple_ssl_debug.yaml  hifigan_multiple_ssl_finetuning.yaml  hifigan_multiple_ssl_finetuning_debug.yaml  hifigan_speech_memory.yaml  hifigan_speech_memory_debug.yaml  layerwise_asr.yaml  layerwise_asr_debug.yaml  pwg.yaml  pwg_debug.yaml  speech_memory.yaml  speech_memory_debug.yaml  with_speech_ssl.yaml  with_speech_ssl_debug.yaml
run/: exp_1.py  exp_hifigan_and_base_hubert.py
src/: logging_config.py  start.py
src/analysis/: analize.ipynb  analize_2.ipynb  download_from_wandb.ipynb
src/collate_fn/: base.py  base_hubert.py  base_hubert_2.py  layerwise_asr.py  speech_memory.py  with_speech_ssl.py
src/data_process/: avhubert_crop.py  check_data_duration.ipynb  check_data_duration.py  check_data_duration_result.csv  check_hubert_feature.py  check_jvs_sex.ipynb  check_silence.py  consider_metrics.ipynb  cut_silence.py  cut_sillence_kablab.py  delete_unnecessary_checkpoints.py  feature.py  preprocess_hubert_features.py  preprocess_speech_ssl_features.py  save_data_split_csv.py  save_landmark_nn.py  transform.py  upload_results_to_gcs.py  utils.py
src/dataset/: base.py  base_hubert.py  base_hubert_2.py  layerwise_asr.py  speech_memory.py  utils.py  with_speech_ssl.py
src/log_fn/: save_loss.py  save_sample.py
src/loss_fn/: base.py  stft_loss.py
src/main/: base.py  base_hubert.py  base_hubert_2.py  base_hubert_2_val_synthesis.py  base_hubert_hifigan_finetuning.py  hifigan.py  hifigan_base_hubert_2.py  hifigan_multiple_ssl.py  hifigan_multiple_ssl_finetuning.py  hifigan_speech_memory.py  layerwise_asr.py  on_end.py  on_start.py  pwg.py  speech_memory.py  start.py  with_speech_ssl.py
src/model/: base.py  base_hubert.py  base_hubert_2.py  hifigan.py  hifigan_base_hubert_2.py  hifigan_multiplt_ssl.py  hifigan_speech_memory.py  layerwise_asr.py  pwg.py  speech_memory.py  utils.py  with_speech_ssl.py
src/pl_datamodule/: base.py  base_hubert.py  base_hubert_2.py  layerwise_asr.py  speech_memory.py  with_speech_ssl.py
src/pl_module/: base.py  base_hubert.py  base_hubert_2.py  hifigan.py  (+8 more)
sweep/: base.yaml
(+107 files in other folders)
